--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 training/antipublic_processed_final.txt filter=lfs diff=lfs merge=lfs -text
 training/linkedin_final.txt filter=lfs diff=lfs merge=lfs -text
 training/rockyou_final.txt filter=lfs diff=lfs merge=lfs -text
+training/input/antipublic.csv.gz filter=lfs diff=lfs merge=lfs -text
+training/input/linkedin.csv.gz filter=lfs diff=lfs merge=lfs -text
