--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-training/input/antipublic_processed_final.txt
-training/input/linkedin_final.txt
-training/input/rockyou_final_ascii.txt
-training/input/rockyou_final.txt
+/training/__pycache__
+/training/.generateDicts.py.swp
