--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "model_recognition/passfault_corinda"]
-	path = model_recognition/passfault_corinda
+	path = passfault_corinda
 	url = https://github.com/bernardoaraujor/passfault_corinda
