--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-lists/rockyou.csv.gz filter=lfs diff=lfs merge=lfs -text
-lists/antipublic.csv.gz filter=lfs diff=lfs merge=lfs -text
-lists/linkedin.csv.gz filter=lfs diff=lfs merge=lfs -text
+csv/rockyou.csv.gz filter=lfs diff=lfs merge=lfs -text
+csv/antipublic.csv.gz filter=lfs diff=lfs merge=lfs -text
+csv/linkedin.csv.gz filter=lfs diff=lfs merge=lfs -text
