--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 csv/rockyou.csv.gz filter=lfs diff=lfs merge=lfs -text
+*.csv.gz filter=lfs diff=lfs merge=lfs -text
+*.json.gz filter=lfs diff=lfs merge=lfs -text
